Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 6.0.1
-
None
-
Qt Creator 6.0.1
Based on Qt 6.2.2 (MSVC 2019, 64 bit)
Built on Dec 15 2021 08:33:28
-
-
22c67db406 (qt-creator/qt-creator/7.0) 22c67db406 (qt-creator/qt-creator/master) 22c67db406 (qt-creator/qt-creator/qds-3.3)
Description
When multiple editor windows are open in Qt Creator, you cannot open a file in anything other than the main window by double-clicking in the Projects browser tree in the Sidebar.
After opening another editor window (CTRL+E,4) you used to be able to click on a secondary window and then double click on an item in the Projects browser tree to open a file in the last selected window. Now any file that you double click in the Projects browser tree seems to open in the main Qt Creator editor window, regardless of what other window was previously selected.
Edit: This only occurs if you have files from multiple projects open.
Edit 2: Correction to the above edit. Simply right-clicking anywhere in the Projects browser tree view restores the ability to then double-click on a file in the browser to open it in a secondary window.
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-26911 Files always open in main window
-
- Closed
-
- relates to
-
QTCREATORBUG-16040 "Open Documents" sidebar doesn't open in external ("New Window") editor
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-26773 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
401656,2 | Fix double-clicking in Projects view to open file in extra window | 7.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |